add_subdirectory(PluginDependent)
add_subdirectory(Plugin_FlatGis)
add_subdirectory(Plugin_HgBump)
add_dependencies(osgdb_osgearth_hgbump fe_plugin_dependent)
add_subdirectory(Plugin_WMTS)
if(WIN32)
#add_subdirectory(Plugin_HgVector)
endif()
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
SET_PROPERTY(TARGET osgdb_osgearth_flatgis PROPERTY FOLDER "FePlugins")
SET_PROPERTY(TARGET osgdb_osgearth_hgbump PROPERTY FOLDER "FePlugins")
SET_PROPERTY(TARGET fe_plugin_dependent PROPERTY FOLDER "FePlugins")
SET_PROPERTY(TARGET osgdb_osgearth_wmts PROPERTY FOLDER "FePlugins")
if(WIN32)
#SET_PROPERTY(TARGET osgdb_osgearth_hgvector PROPERTY FOLDER "FePlugins")
endif()